@@ -189,6 +189,9 @@ changes to languages because of Bugzilla reports.
 * (bug 17160) Gender specific display text for User namespace
 * Link trail added for sl and sh
 * (bug 27633) Add characters to linkTrail for Potuguese (pt and pt-br)
+* (bug 27426) Set $namespaceGenderAliases for Arabic (ar)
+* (bug 27385) Set Polish $namespaceGenderAliases
+* (bug 27681) Set $namespaceGenderAliases for Portuguese (pt and pt-br)
 
 == Compatibility ==
 
